# duckdb-git

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: Build.yml  MainDistributionPipeline.yml
benches/: git_log_with_duckdb.rs
scripts/: compare_divan_table.py  format_divan_table.py  test_compare_divan_table.py  test_format_divan_table.py
src/: git_log.rs  lib.rs  params.rs  schema.rs  types.rs  vector.rs
src/backend/: git2.rs  git_cli.rs  gix.rs  libgit.rs  mod.rs  planner.rs
src/git_log/: git2.rs  gix.rs  libgit.rs  mod.rs  params.rs  schema.rs  types.rs  vector.rs  xdiff.rs
src/git_log/backend/: gix.rs  libgit.rs  mod.rs
test/sql/: git_log.test  git_log_gix.test  git_log_ignore_all_space.test  rusty_quack.test
test/sql/gix/: basic.test  output_file_changes.test  output_parents.test  param_decorate.test  param_diff_merges.test  param_revision.test
test/sql/libgit/: _extension_load.test  basic.test  output_file_changes.test  output_parents.test  param_decorate.test  param_diff_merges.test  param_ignore_all_space.test  param_revision.test
