[package]
name = "duckdb_git"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duckdb-git"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[features]
default = ["loadable-extension", "libgit-backend"]
loadable-extension = ["duckdb/loadable-extension"]
bundled = ["duckdb/bundled"]                       # For benchmark
libgit-backend = ["dep:git2"]
# Additive: can be combined with libgit-backend (default) for runtime backend selection.
gix-backend = ["dep:gix"]

[dependencies]
duckdb = { version = "~1.10505.0", features = ["vtab"] }
git2 = { version = "0.20.2", default-features = false, features = [
    "vendored-libgit2",
], optional = true }
gix = { version = "0.85", optional = true, default-features = false, features = [
    "max-performance-safe",
    "basic",
    "sha1",
] }

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "git_log_with_duckdb"
harness = false
